--- a/Frontend/src/app/components/comment/comment.component.html
+++ b/Frontend/src/app/components/comment/comment.component.html
@@ -11,7 +11,7 @@
       <p><small>{{c.date | date }}</small></p>
     </li>
   </ul>
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+  <button type="button" class="btn btn-info" data-toggle="modal" data-target="#exampleModal">
     Add comment
   </button>
 </div>
@@ -42,7 +42,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button (click)="send()"  type="button" data-dismiss="modal" class="btn btn-primary">Add</button>
+        <button (click)="send()"  type="button" data-dismiss="modal" class="btn btn-info">Add</button>
       </div>
     </div>
   </div>
