--- a/Frontend/src/app/components/new-post/new-post.component.html
+++ b/Frontend/src/app/components/new-post/new-post.component.html
@@ -8,13 +8,13 @@
   </div>
   <div class="form-group">
     <label for="post">Post</label>
-    <input type="text" [(ngModel)]="post" name="post" class="form-control" id="text" placeholder="Post">
+    <input type="text" [(ngModel)]="post" name="post" class="form-control" id="text" placeholder="Enter a title post">
     <small id="post" class="form-text text-muted">Put title post</small>
   </div>
   <div class="form-group">
     <label for="description">Description</label>
-    <textarea type="text" [(ngModel)]="description" name="description" class="form-control" id="description" placeholder="Post"></textarea>    
+    <textarea type="text" [(ngModel)]="description" name="description" class="form-control" id="description" placeholder="Enter a description post"></textarea>    
     <small id="post" class="form-text text-muted">Put description post</small>
   </div>
-  <button type="button" (click)="send()" class="btn btn-primary">Submit</button>
+  <button type="button" (click)="send()" class="btn btn-info">Submit</button>
 </form>
